# statustracker2

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  changelog.md  index.html  out.css  out.css.map  out.js  out.js.map  test-config.toml  tsconfig.json  tsconfig.node.json
.github/: dependabot.yml
.github/workflows/: build-musl.yaml  build-server.yml  build.yml  cargo-upgrade.yaml  docker-publish.yml  musl.yml  pages.yml
assets/: index-09a041a7.js  index-0a46485c.js  index-2a3c185f.js  index-31243b30.js  index-5e5d621d.js  index-67125a99.js  index-74459c25.js  index-db68a92a.css  index.0b90379c.css  index.169cd563.js  index.301e05aa.css  index.375be253.js  index.39eb1371.css  index.3d37b5e7.css  index.3d56c02e.css  index.48d6b89d.js  index.736ba4e5.js  index.aef34bd4.js  index.b2834d7c.css  index.b35a427b.css  index.d1c6cdad.js  index.ef38a1c6.js  index.f091c61e.js  index.f0f0c856.js  index.fb048315.js
statustracker-client/: .eslintrc.yaml  build.mjs  build.mts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
statustracker-client/src/: App.svelte  Chart.svelte  Info.svelte  Input.svelte  RoleStats.svelte  env.d.ts  info.md  main.ts  retrieve-data.ts  stores.ts
statustracker-client/src/comps/: CheckboxButton.svelte
statustracker-client/src/scss/: index.scss
statustracker-client/src/sections/: App.svelte  Chart.svelte  Info.svelte  Input.svelte  RoleStats.svelte
statustracker-server/: Cargo.toml
statustracker-server/src/: config.rs  database.rs  hour.rs  lib.rs  main.rs  name_to_uuid.rs  server.rs  tracker.rs  utils.rs
statustracker-test-server/: Cargo.toml
statustracker-test-server/src/: main.rs
