[package]
name = "statustracker-server"
version = "2.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "^0.6.2"
tracing = "^0.1.37"
tracing-subscriber = { version = "^0.3.17", features = ["env-filter"] }

mongodb = "^2.6.0"
openssl = { version = "^0.10.55", features = ["vendored"] }
reqwest = { version = "^0.11.18", features = ["json"] }
url = { version = "^2.4.0", features = ["serde"] }
rocket = { version = "^0.5.0-rc.3", features = ["msgpack"] }
smol_str = {version = "^0.2.0", features = ["serde"] }

tokio = { version = "^1.29.1", features = ["full"] }
futures = "^0.3.28"

serde = { version = "^1.0.174", features = ["rc"] }
serde_json = "^1.0.103"
serde-big-array = "^0.5.1"
toml = "^0.7.6"
rmp-serde = "^1.1.2"

itertools = "^0.11.0"
once_cell = "^1.18.0"
dotenvy = "^0.15.7"
rayon = "^1.7.0"
uuid = { version = "^1.4.1", features = ["serde"] }
