[package]
name = "statustracker-server"
version = "2.2.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "^0.6.2"
tracing = "^0.1.39"
tracing-subscriber = { version = "^0.3.17", features = ["env-filter"] }

mongodb = "^3.0.0"
openssl = { version = "^0.10.57", features = ["vendored"] }
reqwest = { version = "^0.12.2", features = ["json"] }
url = { version = "^2.4.1", features = ["serde"] }
rocket = { version = "^0.5.0-rc.3", features = ["msgpack"] }
smol_str = {version = "^0.3.1", features = ["serde"] }

tokio = { version = "^1.33.0", features = ["full"] }
futures = "^0.3.28"

serde = { version = "^1.0.189", features = ["rc"] }
serde_json = "^1.0.107"
serde-big-array = "^0.5.1"
toml = "^0.8.2"
rmp-serde = "^1.1.2"

itertools = "^0.14.0"
once_cell = "^1.18.0"
dotenvy = "^0.15.7"
rayon = "^1.8.0"
uuid = { version = "^1.4.1", features = ["serde"] }
