[package]
name = "statustracker-server"
version = "2.2.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "^0.6.3"
tracing = "^0.1.41"
tracing-subscriber = { version = "^0.3.19", features = ["env-filter"] }

mongodb = "^3.2.3"
openssl = { version = "^0.10.72", features = ["vendored"] }
reqwest = { version = "^0.12.15", features = ["json"] }
url = { version = "^2.5.4", features = ["serde"] }
rocket = { version = "^0.5.1", features = ["msgpack"] }
smol_str = {version = "^0.3.2", features = ["serde"] }

tokio = { version = "^1.44.2", features = ["full"] }
futures = "^0.3.31"

serde = { version = "^1.0.219", features = ["rc"] }
serde_json = "^1.0.140"
serde-big-array = "^0.5.1"
toml = "^0.8.20"
rmp-serde = "^1.3.0"

itertools = "^0.14.0"
once_cell = "^1.21.3"
dotenvy = "^0.15.7"
rayon = "^1.10.0"
uuid = { version = "^1.16.0", features = ["serde"] }
