[package]
name = "statustracker-test-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
server = { path = "../statustracker-server", package = "statustracker-server" }
maplit = "^1.0.2"
rocket = "^0.5.0-rc.2"
uuid = "^1.2.1"
tracing-subscriber = { version = "^0.3.16", features = ["env-filter"] }
dotenvy = "^0.15.6"